--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 </nav>
 <div class="row">
-  <div class="col-lg-6 col-md-3">
+  <div class="col-lg-6">
     <div id="myhead">
       <h1>My Name is Emmanuel from Ghana, welcome to my site.</h1>
       <p></p>
@@ -52,7 +52,7 @@
       <p id="psalms">Psalms 23 <br>The Lord is my Shepherd, I shall not want. Amen.</p>
     </div>
   </div>
-  <div class="col-lg-6 col-md-3">
+  <div class="col-lg-6">
     <div class="emma-picture">
       <img class="emmalg" src="emmalg.jpg" alt="Picture of emmanuel" width="60%">
     </div>
